--- a/login_signup/templates/login_signup/index.html
+++ b/login_signup/templates/login_signup/index.html
@@ -41,18 +41,30 @@
 <div class="wrapper">
     <span class="icon-close"><ion-icon name="close"></ion-icon></span>
 
+    <!-- Add this near the top of the template to show any error messages -->
+    {% if messages %}
+    <div class="messages">
+        {% for message in messages %}
+        <div{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
     <div class="form-box login">
         <h2>Login</h2>
-        <form action="#">
+        <form action="{% url 'login_signup:index' %}" method="post">
+            {% csrf_token %}
+            <input type="hidden" name="login" value="login">
+            
             <div class="input-box">
                 <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                <input type="email" required>
+                <input type="email" name="username" required>
                 <label>Email</label>
             </div>
 
             <div class="input-box">
                 <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                <input type="password" required>
+                <input type="password" name="password" required>
                 <label>Password</label>
             </div>
 
@@ -66,40 +78,47 @@
             <div class="login-register">
                 <p style="color: #D5D8DC;">Don't have an account? <a href="#" 
                     class="register-link">Sign-Up</a></p>
-                
             </div>
 
-            <button type="submit" class="btn1">
+            <button type="button" class="btn1">
                 <img class="g-sign-in-btn" src="https://developers.google.com/identity/images/g-logo.png">
                 <a href="{% provider_login_url 'google' %}?next=/journals">Login With Google</a>
             </button>
-
         </form>
     </div>
 
     <div class="form-box register">
         <h2>Sign-Up</h2>
-        <form action="#">
+        <form action="{% url 'login_signup:index' %}" method="post">
+            {% csrf_token %}
+            <input type="hidden" name="signup" value="signup">
+            
             <div class="input-box">
                 <span class="icon"><ion-icon name="person-circle"></ion-icon></span>
-                <input type="text" required>
+                <input type="text" name="username" required>
                 <label>Username</label>
             </div>
 
             <div class="input-box">
                 <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                <input type="email" required>
+                <input type="email" name="email" required>
                 <label>Email</label>
             </div>
 
             <div class="input-box">
                 <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                <input type="password" required>
+                <input type="password" name="password1" required>
                 <label>Password</label>
             </div>
 
+            <div class="input-box">
+                <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                <input type="password" name="password2" required>
+                <label>Confirm Password</label>
+            </div>
+
             <div class="remember-forgot">
-                <label><input type="checkbox">I agree to the terms & conditions</label>
+                <label><input type="checkbox" required>I agree to the terms & conditions</label>
             </div>
 
             <button type="submit" class="btn">Sign-Up</button>
@@ -108,7 +127,6 @@
                 <p style="color: #D5D8DC;">Already have an account? <a href="#" 
                     class="login-link">Login</a></p>
             </div>
-            
         </form>
     </div>
 
